@@ -3001,7 +3001,7 @@ bool CApplication::PlayFile(const CFileItem& item, bool bRestart)
     // Enable Karaoke voice as necessary
 //    if (g_guiSettings.GetBool("Karaoke.VoiceEnabled"))
   //  {
-    if (item.IsAudio() && !item.IsInternetStream() && g_guiSettings.GetBool("Karaoke.Enabled"))
+    if (item.IsAudio() && !item.IsInternetStream() && g_guiSettings.GetBool("Karaoke.Enabled") && !m_CdgParser.IsRunning())
     {
       if (item.IsMusicDb())
         m_CdgParser.Start(item.m_musicInfoTag.GetURL());
