@@ -4,7 +4,7 @@
 #include "../../utils/GUIInfoManager.h"
 #include "AudioContext.h"
 #include "../../filesystem/fileshoutcast.h"
-
+#include "../../application.h"
 
 #define VOLUME_FFWD_MUTE 900 // 9dB
 
@@ -100,7 +100,8 @@ bool PAPlayer::OpenFile(const CFileItem& file, __int64 iStartTime)
 
   if (!m_decoder[m_currentDecoder].Create(file, iStartTime, m_crossFading))
     return false;
-
+  if (g_guiSettings.GetBool("Karaoke.Enabled") && !g_application.m_CdgParser.IsRunning())
+    g_application.m_CdgParser.Start(file.m_strPath);
   m_iSpeed = 1;
   m_bPaused = false;
   m_bStopPlaying = false;
@@ -167,6 +168,8 @@ bool PAPlayer::QueueNextFile(const CFileItem &file)
 
 bool PAPlayer::QueueNextFile(const CFileItem &file, bool checkCrossFading)
 {
+  g_application.m_CdgParser.Stop();
+
   if (file.m_strPath == m_currentFile.m_strPath &&
       file.m_lStartOffset > 0 && 
       file.m_lStartOffset == m_currentFile.m_lEndOffset)
@@ -508,6 +511,8 @@ bool PAPlayer::ProcessPAP()
           m_decoder[m_currentDecoder].Start();
           m_currentStream = 1 - m_currentStream;
           CLog::Log(LOGDEBUG, "Starting Crossfade - resuming stream %i", m_currentStream);
+          if (g_guiSettings.GetBool("Karaoke.Enabled") && !g_application.m_CdgParser.IsRunning())
+            g_application.m_CdgParser.Start(m_nextFile.m_strPath);
           m_pStream[m_currentStream]->Pause(DSSTREAMPAUSE_RESUME);
           m_callback.OnPlayBackStarted();
           m_timeOffset = m_nextFile.m_lStartOffset * 1000 / 75;
